tests/rosetta/out/Fortran/bitwise-operations.error
gfortran error: exit status 1
/workspace/mochi/tests/rosetta/out/Fortran/bitwise-operations.f90:17:3:

   17 |   bitwise(-460,6)
      |   1
Error: Unclassifiable statement at (1)
/workspace/mochi/tests/rosetta/out/Fortran/bitwise-operations.f90:31:11:

   31 |     bits = ''
      |           1
Error: Cannot convert CHARACTER(0) to INTEGER(4) at (1)
/workspace/mochi/tests/rosetta/out/Fortran/bitwise-operations.f90:35:15:

   35 |         bits = bits // '1'
      |               1
Error: Operands of string concatenation operator at (1) are INTEGER(4)/CHARACTER(1)
/workspace/mochi/tests/rosetta/out/Fortran/bitwise-operations.f90:38:15:

   38 |         bits = bits // '0'
      |               1
Error: Operands of string concatenation operator at (1) are INTEGER(4)/CHARACTER(1)
/workspace/mochi/tests/rosetta/out/Fortran/bitwise-operations.f90:42:10:

   42 |     res = bits
      |          1
Error: Cannot convert INTEGER(4) to CHARACTER(100) at (1)
/workspace/mochi/tests/rosetta/out/Fortran/bitwise-operations.f90:53:38:

   53 |       if ((mod(((mod(ua,2) == 1) .and. ub),2) == 1)) then
      |                                      1
Error: Operands of logical operator ‘.and.’ at (1) are LOGICAL(4)/INTEGER(4)
/workspace/mochi/tests/rosetta/out/Fortran/bitwise-operations.f90:71:37:

   71 |       if ((mod(((mod(ua,2) == 1) .or. ub),2) == 1)) then
      |                                     1
Error: Operands of logical operator ‘.or.’ at (1) are LOGICAL(4)/INTEGER(4)
/workspace/mochi/tests/rosetta/out/Fortran/bitwise-operations.f90:91:70:

   91 |       if ((((((abit == 1) .and. bbit) == 0)) .or. ((((abit == 0) .and. bbit) == 1)))) then
      |                                                                      1
Error: Operands of logical operator ‘.and.’ at (1) are LOGICAL(4)/INTEGER(4)
/workspace/mochi/tests/rosetta/out/Fortran/bitwise-operations.f90:91:31:

   91 |       if ((((((abit == 1) .and. bbit) == 0)) .or. ((((abit == 0) .and. bbit) == 1)))) then
      |                               1
Error: Operands of logical operator ‘.and.’ at (1) are LOGICAL(4)/INTEGER(4)
